fix overlap with nav and card flip

--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -14,13 +14,13 @@
     list-style: none;
     // position: relative;
     transform-style: preserve-3d;
-    transform: translate3d(0,0,0) rotateY("0");
+    transform: translate3d(0,0,0) rotateY(0);
     transition: all 0.75s;
     transform-origin: center center 0;
     cursor: pointer;
 
     &.clicked {
-        transform: translate3d(0, 0, 0) rotateY(180deg);
+        transform: translate3d(0, 0, 0) rotateY(-180deg);
 
         // &:hover {
         //     transform: scale(1.05);
@@ -55,9 +55,10 @@
         height: 100%;
         -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
-        transform: translate3d(0,0,0) rotateY(-180deg);
+        // transform: translate3d(0,0,0) rotateY(-180deg);
+        transform: translateZ(0) rotateY(180deg);
         padding: 1rem;
-        position: relative;
+        // position: relative;
         z-index: 1;
 
         @include tablet {
@@ -84,6 +85,7 @@
             border-bottom: $primary-text 1px solid;
             border-right: $primary-text 1px solid;
             box-shadow: 2px 2px #888888;
+            z-index: 1;
             // color: rgb(183, 166, 166);
             @include tablet {
                 // padding: 0.5rem;
