--- a/src/pages/Projects/Projects.scss
+++ b/src/pages/Projects/Projects.scss
@@ -4,6 +4,8 @@
 
 
 .projects {
+    perspective: 1000px;
+    perspective-origin: center center;
     background-color: $background-third;
     // border: green 1px solid;
     width: 100%;
